--- a/index.html
+++ b/index.html
@@ -1,50 +1,85 @@
-<html>
-<header>
-<style>
-ul
-{ list-style-type:none;
-  margin:0;
-  padding:0;
-  width:20%;
-  height:100%;
-  position:fixed;
-  overflow:auto;
-  background-color:f1f1f1;
-  border: 1px solid #555;
+<!DOCTYPE html>
+<html lang='en'>
+<head>
+  <title> nav bar</title>
+  <style>
+  *{
+  margin:0px;
+  padding:0px;
+  }
+  #container ul{
+      list-style:none;
+  }
+  #container ul li{
+      background-color:#3c3e94;
+	  width:150px;
+	  border:1px solid white;
+	  height:50px;
+	  line-height:50px;
+	  text-align:center;
+	  float:left;
+	  color:white;
+	  font-size:18px;
+	  
+  }
+  #container ul li:hover{
+  background-color:#388222;
+  }
+  #container ul ul{
+	  display:none;
+  }
+  #container ul li:hover > ul{
+	  display:block;
+  }
+  body, html{
+	  height:100%;
+	  margin:0;/*background-color:rgb(52,33,84);
+*/	  
+  }
+  #copyright{
+	  position:fixed;
+	  left:0;
+	  bottom:0;
+	  width:100%;
+   background-color:#fff;
+   text-align:center;
+   font-size:13px;
+    }
+	#bg {
+  /* The image used */
+  background-image: url("1.png");
+
+  /* Full height */
+  height: 100%; 
+
+  /* Center and scale the image nicely */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
-li a
-{ display:block;
-  color:#000000;
-  background-color:#dddddd;
-  padding:8px 0px 8px 16px;
-  text-decoration:none;
-}
-li a:hover:not(.active)
-{ background-color:#555555;
-  color:white;
-}
-li a.active
-{ background-color:#4caf50;
-  color:white;
-}
-li
-{ text-align:center;
-  border-bottom: 1px solid #555;
-}
-li:last-child
-{ border:none;
-}
-</style>
-<title>
-body
-</title>
-</header>
-<body>
+  </style>
+</head>
+<body >
+<div id='bg'>
+<div id='container'>
 <ul>
-<li><a href="#" > HOME </a> </li>
-<li> <a href="#"> CONTACTS </a> </li>
-<li><a href="#" > AGENCY </a></li>
-<li><a href="#" > ABOUT </a> </li>
+        <li>link</li>
+		<li>link</li>
+		<li>link</li>
+        <li>link		
+           <ul>
+               <li>link</li>
+			   <li>link</li>
+			   <li>link</li>
+           </ul>
+        </li>		   
+		<li>link</li>
+		<li>link</li>
 </ul>
+	</div>
+<div id='copyright'>
+<p>SOFTWARES BLOG &copy RESERVED 2019</p>
+</div>
+</div>
 </body>
-</html>
+</html>  
