--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       list-style:none;
   }
   #container ul li{
-      background-color:#3c3e94;
+         background-color:#3c3e94;
 	  width:150px;
 	  border:1px solid white;
 	  height:50px;
@@ -33,8 +33,8 @@
   }
   body, html{
 	  height:100%;
-	  margin:0;/*background-color:rgb(52,33,84);
-*/	  
+	  margin:0;
+/*background-color:rgb(52,33,84);*/	  
   }
   #copyright{
 	  position:fixed;
@@ -45,14 +45,9 @@
    text-align:center;
    font-size:13px;
     }
-	#bg {
-  /* The image used */
-  background-image: url("1.png");
-
-  /* Full height */
+  #bg {
+  background-image: url("pics/1.png");
   height: 100%; 
-
-  /* Center and scale the image nicely */
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -64,26 +59,22 @@
 <div id='container'>
 <ul>
         <li>link</li>
-		<li>link</li>
-		<li>link</li>
+	<li>link</li>
+	<li>link</li>
         <li>link		
            <ul>
                <li>link</li>
-			   <li>link</li>
-			   <li>link</li>
+	       <li>link</li>
+               <li>link</li>
            </ul>
         </li>		   
-		<li>link</li>
-		<li>link</li>
+	<li>link</li>
+	<li>link</li>
 </ul>
-	</div>
+</div>
 <div id='copyright'>
 <p>SOFTWARES BLOG &copy RESERVED 2019</p>
 </div>
 </div>
 </body>
-<<<<<<< HEAD
-</html>  
-=======
-</html>  
->>>>>>> ec6ec4123a5dbb992f5175ee87d13ecc7a788ca6
+</html>
