--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
    font-size:13px;
     }
   #bg {
-  background-image: url("pics/1.png");
+  background-image: url("pics/5.jpg");
   height: 100%; 
   background-position: center;
   background-repeat: no-repeat;
