--- a/index.html
+++ b/index.html
@@ -11,19 +11,21 @@
       list-style:none;
   }
   #container ul li{
-         background-color:#3c3e94;
+      background-color:rgb(78,78,78);
 	  width:150px;
-	  border:1px solid white;
+	  border:1px solid purple;
 	  height:50px;
 	  line-height:50px;
 	  text-align:center;
-	  float:left;
+	  float:right;
 	  color:white;
 	  font-size:18px;
+	  opacity:0.9;
+	  font-weight:bold;
 	  
   }
   #container ul li:hover{
-  background-color:#388222;
+  background-color:black;
   }
   #container ul ul{
 	  display:none;
@@ -52,24 +54,29 @@
   background-repeat: no-repeat;
   background-size: cover;
 }
+P{
+	COLOR:white;
+	font-family:FORTE;
+	font-size:26px;
+}
   </style>
 </head>
 <body >
 <div id='bg'>
 <div id='container'>
 <ul>
-        <li>link</li>
-	<li>link</li>
-	<li>link</li>
-        <li>link		
+        <li>ABOUT</li>
+	    <li>CONTACT</li>
+	    <li>NEWS</li>
+        <li>MODELS		
            <ul>
-               <li>link</li>
-	       <li>link</li>
-               <li>link</li>
+               <li>2019</li>
+	           <li>2018</li>
+               <li>2017</li>
            </ul>
         </li>		   
-	<li>link</li>
-	<li>link</li>
+	<li>BRANDS</li>
+	<li>HOME</li>
 </ul>
 </div>
 <div id='copyright'>
