frame inside div

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <div id='bg'>
     <div id='container'>
       <ul>
-        <li>HOME</li>
+        <li><a href='index.html'>HOME</a></li>
 	    <li>BRANDS</li>
 	    <li>NEWS</li>
         <li>MODELS		
@@ -19,10 +19,11 @@
            </ul>
         </li>		   
 	   <li>CONTACT</li>
-	   <li><a href='css.html' target='body'>ABOUT</a></li>
+	   <li><a href='html&css.html' target='content'>ABOUT</a></li>
   </ul>
   <pre>       RIDE.COM</Pre>
  </div>
+ <div id="content"><iframe name="content" src='#' allowtranparency='true'></iframe>
 <div id='copyright'>
 <p>RIDE.COM  &copy RESERVED 2019</p>
 </div>
