--- a/html&css.html
+++ b/html&css.html
@@ -3,8 +3,29 @@
 <title>software blog
 </title>
 <style>
-p{
-	color:rgb(151,57,26);
+p, h1{
+	color:#ECC2EC;
+}
+
+scrollbar {
+  width: 20px;
+}
+
+/* Track */
+scrollbar-track {
+  box-shadow: inset 0 0 5px grey; 
+  border-radius: 10px;
+}
+ 
+/* Handle */
+scrollbar-thumb {
+  background: red; 
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+scrollbar-thumb:hover {
+  background: #b30000; 
 }
 </style>
 
@@ -21,7 +42,47 @@ p{
  computer programs, libraries and related non-executable data, such
  as online documentation or digital media. Computer hardware and 
  software require each other and neither can be realistically used 
- on its own.</p>
+ on its own
+ Computer software, or simply software, is a collection of data or
+ computer instructions that tell the computer how to work. This is in
+ contrast to physical hardware, from which the system is built and
+ actually performs the work. In computer science and software 
+ engineering, computer software is all information processed by 
+ computer systems, programs and data. Computer software includes 
+ computer programs, libraries and related non-executable data, such
+ as online documentation or digital media. Computer hardware and 
+ software require each other and neither can be realistically used 
+ on its own
+ Computer software, or simply software, is a collection of data or
+ computer instructions that tell the computer how to work. This is in
+ contrast to physical hardware, from which the system is built and
+ actually performs the work. In computer science and software 
+ engineering, computer software is all information processed by 
+ computer systems, programs and data. Computer software includes 
+ computer programs, libraries and related non-executable data, such
+ as online documentation or digital media. Computer hardware and 
+ software require each other and neither can be realistically used 
+ on its own
+ Computer software, or simply software, is a collection of data or
+ computer instructions that tell the computer how to work. This is in
+ contrast to physical hardware, from which the system is built and
+ actually performs the work. In computer science and software 
+ engineering, computer software is all information processed by 
+ computer systems, programs and data. Computer software includes 
+ computer programs, libraries and related non-executable data, such
+ as online documentation or digital media. Computer hardware and 
+ software require each other and neither can be realistically used 
+ on its own
+ Computer software, or simply software, is a collection of data or
+ computer instructions that tell the computer how to work. This is in
+ contrast to physical hardware, from which the system is built and
+ actually performs the work. In computer science and software 
+ engineering, computer software is all information processed by 
+ computer systems, programs and data. Computer software includes 
+ computer programs, libraries and related non-executable data, such
+ as online documentation or digital media. Computer hardware and 
+ software require each other and neither can be realistically used 
+ on its .</p>
  </div>
  </body>
  </html>
