--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
   <div id='bg'>
     <div id='container'>
       <ul>
-        <li><a href='index.html'>HOME</a></li>
-	    <li>BRANDS</li>
-	    <li>NEWS</li>
+        <li><a href='kabbecashier.html' target='content'>HOME</a></li>
+	    <li><a href=#>BRANDS</a></li>
+	    <li><a href=#>NEWS</a></li>
         <li>MODELS		
            <ul>
-               <li>2019</li>
-	           <li>2018</li>
-               <li>2017</li>
+               <li><a href=#>2019</a></li>
+	           <li><a href=#>2018</a></li>
+               <li><a href=#>2017</a></li>
            </ul>
         </li>		   
 	   <li>CONTACT</li>
@@ -23,7 +23,7 @@
   </ul>
   <pre>       RIDE.COM</Pre>
  </div>
- <div id="content"><iframe name="content" src='#' allowtranparency='true'></iframe>
+ <div id="content"><iframe name="content" src='kabbecashier.html' allowtranparency='true'></iframe>
 <div id='copyright'>
 <p>RIDE.COM  &copy RESERVED 2019</p>
 </div>
