--- a/kabbecashier.html
+++ b/kabbecashier.html
@@ -15,7 +15,7 @@ ORDER:<select id='ordertxt'>
    <option value="bread">hot dog</option>
     <option value="bread">chicken</option>
 	 <option value="bread">popcorn</option>
-</select><br>
+</select><br><br>
 QUANTITY:<input type="number" id='quantitytxt'></br><br><br>
 <button onclick="saveorder()">next order</button><br><br><br>
 <button onclick="display()">display customer order</button><br><br><br>
