--- a/homework.html
+++ b/homework.html
@@ -10,5 +10,6 @@
 </head>
 <body>
    <button onclick= 'reverseNumber()' >REVERSE NUMBER</button> 
+   <button onclick= 'palindrome()' >PALINDROME</button> 
 </body>
 </html>
